-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: hs10, hs14
-
Component/s: hotspot
-
b09
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2170542 | 7 | Tom Rodriguez | P2 | Closed | Fixed | b42 |
| JDK-2170354 | 6u12 | Tom Rodriguez | P2 | Resolved | Fixed | b02 |
| JDK-2170202 | hs11.2 | Tom Rodriguez | P2 | Resolved | Fixed | b01 |
Execution results with HS14 b05 (JDK 7 b35 ):
-client -Xcomp -XX:-DontCompileHugeMethods:
[
Tester.var_114 = 0.0
Tester.var_118 = null
Tester.var_116 = null
Tester.var_113 = null
Tester.var_115 = null
Tester.var_117 = [[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], []]
]
-Xint & -server:
[
Tester.var_114 = 0.0
Tester.var_118 = null
Tester.var_116 = null
Tester.var_113 = null
Tester.var_115 = null
Tester.var_117 = []
]
PS: in order to reproduce the bug, rename attached file to Tester.java.
Another one: 1.java
-Xcomp -client -XX:-DontCompileHugeMethods:
[
Tester.var_16 = 1994208903
Tester.var_9 = crufxb
Tester.var_12 = crufxb
Tester.var_10 = false
Tester.var_13 = NaN
Tester.var_14 = 1.4247029484740196E308
Tester.var_15 = 0.0
Tester.var_8 = [
Tester_Class_0.var_1 = 386124292
Tester_Class_0.var_2 = false
Tester_Class_0.var_3 = false
]
Tester.var_11 =
]
Expected:
[
Tester.var_16 = 1994208903
Tester.var_9 = crufxb
Tester.var_12 = crufxb
Tester.var_10 = false
Tester.var_13 = Infinity
Tester.var_14 = 1.4247029484740196E308
Tester.var_15 = 0.0
Tester.var_8 = [
Tester_Class_0.var_1 = 386124292
Tester_Class_0.var_2 = false
Tester_Class_0.var_3 = true
]
Tester.var_11 = []
]
Another similar failure: 7.java
HS11-b05 (1.6.0_11-ea-b00) and HS14-b05 (7b36)
-client -Xcomp -XX:-DontCompileHugeMethods:
Tester.var_90 = 118
Tester.var_88 = 0.0
Tester.var_85 = 2.158589E38
Tester.var_84 = 0
Tester.var_87 = 0
Tester.var_86 = null
Tester.var_89 = null
Expected:
Tester.var_90 = 103
Tester.var_88 = 0.0
Tester.var_85 = 2.158589E38
Tester.var_84 = 0
Tester.var_87 = 0
Tester.var_86 = null
Tester.var_89 = null
Another similar failure: 01.java
HS11-b05 (1.6.0_11-ea-b00) and HS14-b05 (7b36)
-Xcomp -client -XX:-DontCompileHugeMethods:
...
Tester.var_77 = false
...
Expected results:
...
Tester.var_77 = true
...
Similar failure: 2.java
HS11-b05 (1.6.0_11-ea-b00) and HS14-b05 (7b36)
solaris-i586
-Xcomp -client -XX:-DontCompileHugeMethods:
...
Tester.var_92 = Infinity
...
Expected:
...
Tester.var_92 = -Infinity
...
Similar failure: 5.java
HS11-b05 (1.6.0_11-ea-b00) and HS14-b05 (7b36)
-Xcomp -client -XX:-DontCompileHugeMethods:
...
Tester.var_69 = 1
...
Expected result:
...
Tester.var_69 = 0
...
Similar failure: 6.java
HS11-b05 (1.6.0_11-ea-b00) and HS14-b05 (7b36)
-Xcomp -client -XX:-DontCompileHugeMethods:
...
Tester.var_142 = 44
...
Expected result:
...
Tester.var_142 = 186
...
Similar failure: 07.java
HS11-b05 (1.6.0_11-ea-b00) and HS14-b05 (7b36)
-Xcomp -client -XX:-DontCompileHugeMethods:
...
Tester.var_38 = -1
...
Expected result:
...
Tester.var_38 = -2
...
Similar failure: 8.java
HS11-b05 (1.6.0_11-ea-b00) and HS14-b05 (7b36)
-Xcomp -client -XX:-DontCompileHugeMethods:
...
Tester.var_142 = 44
...
Expected result:
...
Similar failure: 6.java
HS11-b05 (1.6.0_11-ea-b00) and HS14-b05 (7b36)
-Xcomp -client -XX:-DontCompileHugeMethods:
...
Tester.var_29 = true
...
Expected result:
...
Tester.var_29 = false
...
-client -Xcomp -XX:-DontCompileHugeMethods:
[
Tester.var_114 = 0.0
Tester.var_118 = null
Tester.var_116 = null
Tester.var_113 = null
Tester.var_115 = null
Tester.var_117 = [[], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], []]
]
-Xint & -server:
[
Tester.var_114 = 0.0
Tester.var_118 = null
Tester.var_116 = null
Tester.var_113 = null
Tester.var_115 = null
Tester.var_117 = []
]
PS: in order to reproduce the bug, rename attached file to Tester.java.
Another one: 1.java
-Xcomp -client -XX:-DontCompileHugeMethods:
[
Tester.var_16 = 1994208903
Tester.var_9 = crufxb
Tester.var_12 = crufxb
Tester.var_10 = false
Tester.var_13 = NaN
Tester.var_14 = 1.4247029484740196E308
Tester.var_15 = 0.0
Tester.var_8 = [
Tester_Class_0.var_1 = 386124292
Tester_Class_0.var_2 = false
Tester_Class_0.var_3 = false
]
Tester.var_11 =
]
Expected:
[
Tester.var_16 = 1994208903
Tester.var_9 = crufxb
Tester.var_12 = crufxb
Tester.var_10 = false
Tester.var_13 = Infinity
Tester.var_14 = 1.4247029484740196E308
Tester.var_15 = 0.0
Tester.var_8 = [
Tester_Class_0.var_1 = 386124292
Tester_Class_0.var_2 = false
Tester_Class_0.var_3 = true
]
Tester.var_11 = []
]
Another similar failure: 7.java
HS11-b05 (1.6.0_11-ea-b00) and HS14-b05 (7b36)
-client -Xcomp -XX:-DontCompileHugeMethods:
Tester.var_90 = 118
Tester.var_88 = 0.0
Tester.var_85 = 2.158589E38
Tester.var_84 = 0
Tester.var_87 = 0
Tester.var_86 = null
Tester.var_89 = null
Expected:
Tester.var_90 = 103
Tester.var_88 = 0.0
Tester.var_85 = 2.158589E38
Tester.var_84 = 0
Tester.var_87 = 0
Tester.var_86 = null
Tester.var_89 = null
Another similar failure: 01.java
HS11-b05 (1.6.0_11-ea-b00) and HS14-b05 (7b36)
-Xcomp -client -XX:-DontCompileHugeMethods:
...
Tester.var_77 = false
...
Expected results:
...
Tester.var_77 = true
...
Similar failure: 2.java
HS11-b05 (1.6.0_11-ea-b00) and HS14-b05 (7b36)
solaris-i586
-Xcomp -client -XX:-DontCompileHugeMethods:
...
Tester.var_92 = Infinity
...
Expected:
...
Tester.var_92 = -Infinity
...
Similar failure: 5.java
HS11-b05 (1.6.0_11-ea-b00) and HS14-b05 (7b36)
-Xcomp -client -XX:-DontCompileHugeMethods:
...
Tester.var_69 = 1
...
Expected result:
...
Tester.var_69 = 0
...
Similar failure: 6.java
HS11-b05 (1.6.0_11-ea-b00) and HS14-b05 (7b36)
-Xcomp -client -XX:-DontCompileHugeMethods:
...
Tester.var_142 = 44
...
Expected result:
...
Tester.var_142 = 186
...
Similar failure: 07.java
HS11-b05 (1.6.0_11-ea-b00) and HS14-b05 (7b36)
-Xcomp -client -XX:-DontCompileHugeMethods:
...
Tester.var_38 = -1
...
Expected result:
...
Tester.var_38 = -2
...
Similar failure: 8.java
HS11-b05 (1.6.0_11-ea-b00) and HS14-b05 (7b36)
-Xcomp -client -XX:-DontCompileHugeMethods:
...
Tester.var_142 = 44
...
Expected result:
...
Similar failure: 6.java
HS11-b05 (1.6.0_11-ea-b00) and HS14-b05 (7b36)
-Xcomp -client -XX:-DontCompileHugeMethods:
...
Tester.var_29 = true
...
Expected result:
...
Tester.var_29 = false
...
- backported by
-
JDK-2170202 C1 generates invalid code
-
- Resolved
-
-
JDK-2170354 C1 generates invalid code
-
- Resolved
-
-
JDK-2170542 C1 generates invalid code
-
- Closed
-
- duplicates
-
JDK-6763111 Data corruption in compiler1 when expression throws an Exception
-
- Closed
-
- relates to
-
JDK-7170319 Bug in GVN code in C1 breaks Java volatile semantics
-
- Closed
-