6756768: C1 generates invalid code

Reviewed-by: kvn, jrose